shortened padding between navbar elements, collapses when squished smaller than max width

--- a/style.css
+++ b/style.css
@@ -21,5 +21,10 @@ nav {
 }
 .navitem {
   display: inline;
-  padding-right: 20px;
+  padding-right: 12px;
+}
+@media only screen and (max-width: 700px) {
+  .navitem {
+    display: block;
+  }
 }
