--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ nav {
   display: inline;
   padding-right: 12px;
 }
-@media only screen and (max-width: 700px) {
+@media only screen and (max-width: 5in) {
   .navitem {
     display: block;
   }
