--- a/style.css
+++ b/style.css
@@ -23,7 +23,12 @@ nav {
   display: inline;
   padding-right: 12px;
 }
-@media only screen and (max-width: 5in) {
+@media only screen and (max-width: 700px) {
+  .navitem {
+    display: block;
+  }
+}
+@media only screen and (hover: none) and (pointer: coarse){
   .navitem {
     display: block;
   }
