--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ nav {
     display: block;
   }
 }
-@media only screen and (hover: none) and (pointer: coarse){
+@media only screen and (hover: none) {
   .navitem {
     display: block;
   }
