--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ nav {
   border-color: grey;
 }
 .navbar {
-  max-width:450px;
+  max-width:100%;
   margin-left:auto;
   margin-right:auto;
   top: 0;
